# llama

./: copilot.txt  pyproject.toml
src/llama/: client.py
